# git-interviewer

./: .gitignore  README.md  pyproject.toml
src/git-interviewer/: config.py  personas.py
src/git_interviewer/: cli.py  config.py  git_utils.py  llm.py
