[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-interviewer"
version = "0.1.0"
description = "A pre-commit hook that interviews you about your code."
authors = [{name = "Naman Rusia", email = "naman.rusia14@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
git-interviewer = "git_interviewer.main:app"